Ignore --try-chrome-again when no argument is given.

It seems that Chrome on Mac is being launched with this switch a fair
amount. The browser startup codepaths that interpret it all require that
it have a value. This change applies the same policy to the other two
places that check for the switch on the command line.

BUG=784447

Change-Id: I62702cbd377ca95f15e56d3f64f3f13533f15abd